--- a/.github/workflows/run-maturity-tests.yml
+++ b/.github/workflows/run-maturity-tests.yml
@@ -1,15 +1,8 @@
 name: Run service maturity tests
 
 on:
-  workflow_dispatch:
-    inputs:
-      GITHUB_MAX_ISSUES:
-        description: 'Maximum number of issues to pass the test'
-        default: "10"
-        type: "string"
-        required: true
-#  schedule:
-#   - cron:  '30 5,17 * * *'
+  schedule:
+   - cron:  '0 * * * *'
 
 jobs:
   check-has-readme:
@@ -21,7 +14,7 @@ jobs:
   check-linked-issues:
     uses: ./.github/workflows/check-linked-issues.yml
     with:
-      GITHUB_MAX_ISSUES: ${{ inputs.GITHUB_MAX_ISSUES }}
+      GITHUB_MAX_ISSUES: "10"
     secrets: 
       PORT_CLIENT_ID: ${{ secrets.PORT_CLIENT_ID }}
       PORT_CLIENT_SECRET: ${{ secrets.PORT_CLIENT_SECRET }}
