--- a/.github/workflows/check-fastapi-version.yml
+++ b/.github/workflows/check-fastapi-version.yml
@@ -29,7 +29,7 @@ jobs:
        with:
          clientId: ${{ secrets.PORT_CLIENT_ID }}
          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-         title: sentry-${{ github.event.repository.name }}
+         title: fastapi-${{ github.event.repository.name }}
          blueprint: CheckRun
          properties: |
            {
