--- a/.github/workflows/run-maturity-tests.yml
+++ b/.github/workflows/run-maturity-tests.yml
@@ -2,8 +2,8 @@ name: Run service maturity tests
 
 on:
   workflow_dispatch:
-  schedule:
-   - cron:  '0 * * * *'
+  # schedule:
+ #  - cron:  '0 * * * *'
 
 jobs:
   check-has-readme:
